--- a/scorecard1.html
+++ b/scorecard1.html
@@ -11,23 +11,32 @@
   <table>
     <thead>
       <tr>
-        <th>Hole</th>
-        <th>Player 1</th>
-        <th>Player 2</th>
-        <th>Player 3</th>
+        <th>Player</th>
+        <th>Round 1</th>
+        <th>Round 2</th>
+        <th>Round 3</th>
+        <th>Total</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td></td><td></td><td></td></tr>
-      <tr><td>2</td><td></td><td></td><td></td></tr>
-      <tr><td>3</td><td></td><td></td><td></td></tr>
-      <tr><td>4</td><td></td><td></td><td></td></tr>
-      <tr><td>5</td><td></td><td></td><td></td></tr>
-      <tr><td>6</td><td></td><td></td><td></td></tr>
-      <tr><td>7</td><td></td><td></td><td></td></tr>
-      <tr><td>8</td><td></td><td></td><td></td></tr>
-      <tr><td>9</td><td></td><td></td><td></td></tr>
-    </tbody>
-  </table>
-</body>
-</html>
+      <tr>
+        <td>John</td>
+        <td>72</td>
+        <td>70</td>
+        <td>68</td>
+        <td>210</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>74</td>
+        <td>69</td>
+        <td>71</td>
+        <td>214</td>
+      </tr>
+      <tr>
+        <td>Tom</td>
+        <td>75</td>
+        <td>73</td>
+        <td>70</td>
+        <td>218</td>
+      </tr>
