--- a/scorecard2.html
+++ b/scorecard2.html
@@ -11,21 +11,31 @@
   <table>
     <thead>
       <tr>
-        <th>Inning</th>
-        <th>Team A</th>
-        <th>Team B</th>
+        <th>Team</th>
+        <th>Inning 1</th>
+        <th>Inning 2</th>
+        <th>Inning 3</th>
+        <th>Inning 4</th>
+        <th>Runs</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td></td><td></td></tr>
-      <tr><td>2</td><td></td><td></td></tr>
-      <tr><td>3</td><td></td><td></td></tr>
-      <tr><td>4</td><td></td><td></td></tr>
-      <tr><td>5</td><td></td><td></td></tr>
-      <tr><td>6</td><td></td><td></td></tr>
-      <tr><td>7</td><td></td><td></td></tr>
-      <tr><td>8</td><td></td><td></td></tr>
-      <tr><td>9</td><td></td><td></td></tr>
+      <tr>
+        <td>Red Sox</td>
+        <td>0</td>
+        <td>2</td>
+        <td>1</td>
+        <td>3</td>
+        <td>6</td>
+      </tr>
+      <tr>
+        <td>Yankees</td>
+        <td>1</td>
+        <td>0</td>
+        <td>0</td>
+        <td>2</td>
+        <td>3</td>
+      </tr>
     </tbody>
   </table>
 </body>
