--- a/scorecard3.html
+++ b/scorecard3.html
@@ -11,22 +11,34 @@
   <table>
     <thead>
       <tr>
-        <th>Frame</th>
-        <th>Player 1</th>
-        <th>Player 2</th>
+        <th>Player</th>
+        <th>Frame 1</th>
+        <th>Frame 2</th>
+        <th>Frame 3</th>
+        <th>Frame 4</th>
+        <th>Frame 5</th>
+        <th>Total</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td></td><td></td></tr>
-      <tr><td>2</td><td></td><td></td></tr>
-      <tr><td>3</td><td></td><td></td></tr>
-      <tr><td>4</td><td></td><td></td></tr>
-      <tr><td>5</td><td></td><td></td></tr>
-      <tr><td>6</td><td></td><td></td></tr>
-      <tr><td>7</td><td></td><td></td></tr>
-      <tr><td>8</td><td></td><td></td></tr>
-      <tr><td>9</td><td></td><td></td></tr>
-      <tr><td>10</td><td></td><td></td></tr>
+      <tr>
+        <td>Alice</td>
+        <td>9</td>
+        <td>8</td>
+        <td>10</td>
+        <td>7</td>
+        <td>9</td>
+        <td>43</td>
+      </tr>
+      <tr>
+        <td>Bob</td>
+        <td>7</td>
+        <td>10</td>
+        <td>6</td>
+        <td>8</td>
+        <td>10</td>
+        <td>41</td>
+      </tr>
     </tbody>
   </table>
 </body>
